# LGDXRobot-Cloud-Adapter

./: .gitlab-ci.yml  README.md
lgdxrobot_cloud_adapter/: CMakeLists.txt  package.xml
lgdxrobot_cloud_adapter/include/lgdxrobot_cloud_adapter/: CloudAdapter.hpp  CloudExchangeStream.hpp  Exchange.hpp  Navigation.hpp  RobotStatus.hpp  SlamExchangeStream.hpp
lgdxrobot_cloud_adapter/src/: CloudAdapter.cpp  CloudExchangeStream.cpp  Exchange.cpp  Map.cpp  Navigation.cpp  RobotStatus.cpp  SlamExchangeStream.cpp  main.cpp
lgdxrobot_cloud_msgs/: CMakeLists.txt  package.xml
lgdxrobot_cloud_msgs/msg/: RobotData.msg
lgdxrobot_cloud_msgs/srv/: McuSn.srv
