cmake_minimum_required(VERSION 3.8)
project(lgdxrobot_cloud_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)

#
# Node Msg
#
find_package(rosidl_default_generators REQUIRED)
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/AutoTask.msg"
  "msg/RobotData.msg"
  "srv/AutoTaskNext.srv"
  "srv/AutoTaskAbort.srv"
  "srv/McuSn.srv"
)
ament_export_dependencies(rosidl_default_runtime)
rosidl_get_typesupport_target(cpp_typesupport_target
  ${PROJECT_NAME}
  rosidl_typesupport_cpp
)


ament_package()
